[package]
name = "randpass"
version = "0.1.1"
edition = "2021"

description = "Secure password generator featuring a customizable character set, entropy calculation, and more."
license = "MIT"
authors = ["Hiroki Okada <okada9@proton.me>"]
repository = "https://github.com/okada9/randpass"
documentation = "https://docs.rs/randpass"
keywords = ["password", "password-generator"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
crossterm = "0.28.1"
rand = "0.8.5"
regex = "1.10.6"
textwrap = "0.16.1"
